<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.taskfrog.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.taskfrog.ui.list.ListFragment"
        android:label="@string/title_list"
        android:icon="@drawable/ic_list_black_24dp"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_list_to_taskFragment"
            app:destination="@id/taskFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.taskfrog.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        android:icon="@drawable/ic_calendar_month_black_24dp"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/taskFragment"
        android:name="com.example.taskfrog.ui.list.TaskFragment"
        android:label="Tasks"
        tools:layout="@layout/fragment_task" >
        <action
            android:id="@+id/action_taskFragment_to_navigation_list"
            app:destination="@id/navigation_list" />
    </fragment>
</navigation>