<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <TextView
            android:text="@string/add_task_information"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            android:padding="10dp"
            android:elevation="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/taskName"
            android:hint="@string/enter_task_name"
            android:inputType="textPersonName"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/shape_background"
            android:padding="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" />

        <Button
            android:id="@+id/taskDate"
            android:text="@string/select_due_date"
            android:textAllCaps="false"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_background"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:icon="@drawable/ic_calendar_month_black_24dp" />

        <EditText
            android:id="@+id/taskDescription"
            android:hint="@string/enter_description"
            android:inputType="textLongMessage"
            android:textColor="@color/purple_500"
            android:background="@drawable/shape_background"
            android:padding="15dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" />


    </LinearLayout>

</LinearLayout>